force-app/main/default/objects/Obj__c/Obj__c.object-meta.xml
<CustomObject>
    <description>Obj</description>
    <label>Obj</label>
    <nameField>
        <label>Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>