force-app/main/default/objects/Obj__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Lookup</description>
    <inlineHelpText>Account Lookup</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Objs</relationshipLabel>
    <relationshipName>Objs</relationshipName>
    <type>Lookup</type>
</CustomField>