force-app/main/default/objects/Obj__c/fields/Account_Lookup_w_Filter__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup_w_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Lookup w Filter</description>
    <inlineHelpText>Account Lookup w Filter</inlineHelpText>
    <label>Account Lookup w Filter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Objs (Account Lookup w Filter)</relationshipLabel>
    <relationshipName>Objs1</relationshipName>
    <type>Lookup</type>
</CustomField>