force-app/main/default/objects/Obj__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <defaultValue>120</defaultValue>
    <description>Age</description>
    <inlineHelpText>Age Help</inlineHelpText>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>