force-app/main/default/objects/Obj__c/fields/Global_PickList__c.field-meta.xml
<CustomField>
    <fullName>Global_PickList__c</fullName>
    <description>Global PickList</description>
    <inlineHelpText>Global PickList</inlineHelpText>
    <label>Global PickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_PickList</valueSetName>
    </valueSet>
</CustomField>