force-app/main/default/objects/Obj__c/fields/Global_PickList_multi__c.field-meta.xml
<CustomField>
    <fullName>Global_PickList_multi__c</fullName>
    <description>Global PickList multi</description>
    <inlineHelpText>Global PickList multi</inlineHelpText>
    <label>Global PickList multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_PickList</valueSetName>
    </valueSet>
</CustomField>