force-app/main/default/objects/Obj__c/fields/Local_PickList__c.field-meta.xml
<CustomField>
    <fullName>Local_PickList__c</fullName>
    <description>Local PickList</description>
    <inlineHelpText>Local PickList</inlineHelpText>
    <label>Local PickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>local 1</fullName>
            </value>
            <value>
                <fullName>local 2</fullName>
            </value>
            <value>
                <fullName>local 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>