force-app/main/default/objects/Obj__c/fields/Local_PickList_multi__c.field-meta.xml
<CustomField>
    <fullName>Local_PickList_multi__c</fullName>
    <description>Local PickList multi</description>
    <inlineHelpText>Local PickList multi</inlineHelpText>
    <label>Local PickList multi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local PickList multi 1</fullName>
            </value>
            <value>
                <fullName>Local PickList multi 2</fullName>
            </value>
            <value>
                <fullName>Local PickList multi 3</fullName>
            </value>
            <value>
                <fullName>Local PickList multi 4</fullName>
            </value>
            <value>
                <fullName>Local PickList multi 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>